--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ server {
   listen 80;
 
 # Type your domain name below
-  server_name prod.sfa360.in;
+  server_name 20.197.29.2:80;
 
 # Always serve index.html for any request
   location / {
