--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ server {
   listen 80;
 
 # Type your domain name below
-  server_name qa.sfa360.in
+  server_name qa.sfa360.in;
 
 # Always serve index.html for any request
   location / {
