--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal-video": "^1.2.7",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
