--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-lottie": "^1.2.3",
     "react-modal-video": "^1.2.7",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
