--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^17.0.2",
     "react-lottie": "^1.2.3",
     "react-modal-video": "^1.2.7",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.1"
